--- a/auth/package.json
+++ b/auth/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
@@ -23,6 +24,8 @@
         "mongoose": "^8.1.1"
     },
     "devDependencies": {
+        "@types/cookie-parser": "^1.4.6",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "nodemon": "^3.0.3",
         "rimraf": "^5.0.5",
