--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.14.202",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
