--- a/product/package.json
+++ b/product/package.json
@@ -14,6 +14,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "amqplib": "^0.10.3",
+        "axios": "^1.6.7",
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
@@ -21,6 +23,7 @@
         "mongoose": "^8.1.1"
     },
     "devDependencies": {
+        "@types/amqplib": "^0.10.4",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "nodemon": "^3.0.3",
