[200~feat(user): added verify admin and edit user functionality

--- a/compose.yaml
+++ b/compose.yaml
@@ -83,6 +83,7 @@ services:
     cart:
         build: ./cart
         container_name: emc-cart
+        restart: always
         depends_on:
             - db-cart
         ports:
